maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:11: error: illegal start of statement
                              {avance;)};
                                      ^