maze.wallfollower.WallFollowerMaze.scala.code
override def run() {while (!estSurBiscuit())
                    {keepHandOnSideWall()};prendBiscuit()

}

def keepHandOnSideWall(): Int = {gauche ();
                          if (!estFaceMur())
                              {avance();}
                          droite();
                          if (!estFaceMur())
                              {avance;)};
                          droite();
                          }